--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practice</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+   <section class="main-area">
+       <div class="left">
+           <h1><span class="name">Al-Amin</span> Anik</h1>
+           <h3>World-class professional web dev</h3>
+           <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+       </div>
+       <div class="img">
+           <img src="images/anik-removebg-preview.png" alt="">
+       </div>
+   </section>
 </body>
 </html>
